[package]
name = "bitboard_xo"
version = "1.1.0" # remember to update html_root_url
authors = ["thanadolps <thanadolps@gmail.com>"]
edition = "2018"
description = "XO game implemented in rust with minimum memory usage"
repository = "https://github.com/thanadolps/bitboard_xo"
license = 'MIT'
readme = "README.md"
keywords = ["xo", "bitboard", "tic tac toe"]
categories = ["games", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.7"
outcome = "0.1"

[dev-dependencies]

[badges]
travis-ci = { repository = "thanadolps/bitboard_xo", branch = "master" }
maintenance = { status = "passively-maintained" }